--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body className="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
